--- a/412Project_CreditScore.Rmd
+++ b/412Project_CreditScore.Rmd
@@ -274,6 +274,19 @@ kmeans_model_train$centers #what each cluster's average values are for each vari
 #Cluster 3 and 4 are different than Cluster 1 and 2 in terms of the Response Variable.
 kmeans_model_train$size
 ```
+
+```{r}
+Cluster3 <- subset.data.frame(Majority_with_cluster,cluster == 3)
+Sample3 <- Cluster3[sample(nrow(Cluster3), nrow(Cluster3)/nrow(Majority) * nrow(cs_train_min), replace = FALSE),]
+Sample3
+nrow(Sample3)
+Cluster5 <- subset.data.frame(Majority_with_cluster, c(cluster == 5, cluster ==1, cluster == 2, cluster ==4))
+Sample5 <- Cluster5[sample(nrow(Cluster5), nrow(Cluster5)/nrow(Majority) * nrow(cs_train_min), replace = FALSE),]
+nrow(Sample5)
+balanced_dataset.1 <- rbind(cs_train_min[-which(names(cs_train_min) == "X")], Sample3[-which(names(Sample3) == "cluster")], Sample5[-which(names(Sample5) == "cluster")])
+head(balanced_dataset.1)
+```
+
 ```{r}
 set.seed(500)
 Majority <- cs_train_maj[,-which(names(cs_train_maj) == "X")]
